--- a/src/app/components/new-task/new-task.component.html
+++ b/src/app/components/new-task/new-task.component.html
@@ -1,7 +1,10 @@
 <section class="h-screen w-screen flex justify-center items-center">
-  <div class="h-1/3 w-1/3 bg-green-600 rounded-md p-5 flex flex-col space-y-3">
+  <div class="h-1/3 w-1/3 bg-emerald-400 rounded-md p-5 flex flex-col space-y-3 shadow-xl">
     <div class="flex items-start justify-end">
-      <a class="w-10 bg-red-500" [routerLink]="''">
+      <a
+        class="w-10 bg-red-500 rounded-md text-center font-bold border-2 border-stone-900"
+        [routerLink]="''"
+      >
         <button>X</button>
       </a>
     </div>
@@ -11,25 +14,25 @@
       (ngSubmit)="onSubmit()"
     >
       <input
-        class="h-8 px-2"
+        class="h-8 px-2 rounded-md"
         type="text"
         placeholder="Task title"
         formControlName="newTitle"
       />
       <textarea
-        class="h-16 px-2 py-1"
+        class="h-16 px-2 py-1 rounded-md"
         cols="20"
         rows="10"
         placeholder="Add a note..."
         formControlName="newDescription"
       ></textarea>
-      <select class="h-8" name="" id="" formControlName="newStatus">
+      <select class="h-8 rounded-md" name="" id="" formControlName="newStatus">
         <option *ngFor="let state of status" [ngValue]="state">
           {{ state }}
         </option>
       </select>
       <a
-        class="flex justify-center h-8 px-0 py-1 w-1/5 bg-green-500 mx-auto"
+        class="flex justify-center h-8 px-0 py-1 w-1/5 bg-green-500 mx-auto rounded-md border-2 border-stone-900"
         href=""
       >
         <button class="px-0">Create</button>
