--- a/src/app/components/task-description/task-description.component.html
+++ b/src/app/components/task-description/task-description.component.html
@@ -1,20 +1,23 @@
 <section class="h-screen w-screen flex justify-center items-center">
-  <div class="h-1/3 w-1/3 bg-green-600 rounded-md p-5 flex flex-col space-y-3">
+  <div class="h-1/3 w-1/3 bg-emerald-400 rounded-md p-5 flex flex-col space-y-3 shadow-xl">
     <div class="flex items-start justify-end">
-      <a class="w-10 bg-red-500" href="">
+      <a
+        class="w-10 bg-red-500 rounded-md text-center font-bold border-2 border-stone-900"
+        [routerLink]="''"
+      >
         <button>X</button>
       </a>
     </div>
     <div class="h-full w-full flex flex-col space-y-5">
       <input
-        class="h-8 px-2"
+        class="h-8 px-2 rounded-md"
         type="text"
         placeholder="Task title"
         [value]="selectedId.title"
         disabled
       />
       <textarea
-        class="h-16 px-2 py-1"
+        class="h-16 px-2 py-1 rounded-md"
         cols="20"
         rows="10"
         placeholder="Add a note..."
@@ -22,7 +25,7 @@
         disabled
       ></textarea>
       <input
-        class="h-8 px-2"
+        class="h-8 px-2 rounded-md"
         type="text"
         [value]="selectedId.status"
         disabled
