--- a/src/app/components/new-task/new-task.component.html
+++ b/src/app/components/new-task/new-task.component.html
@@ -1,5 +1,7 @@
 <section class="h-screen w-screen flex justify-center items-center">
-  <div class="h-1/3 w-1/3 bg-emerald-400 rounded-md p-5 flex flex-col space-y-3 shadow-xl">
+  <div
+    class="h-1/3 w-1/3 bg-emerald-400 rounded-md p-5 flex flex-col space-y-3 shadow-xl"
+  >
     <div class="flex items-start justify-end">
       <a
         class="w-10 bg-red-500 rounded-md text-center font-bold border-2 border-stone-900"
@@ -31,12 +33,11 @@
           {{ state }}
         </option>
       </select>
-      <a
+      <button
         class="flex justify-center h-8 px-0 py-1 w-1/5 bg-green-500 mx-auto rounded-md border-2 border-stone-900"
-        href=""
       >
-        <button class="px-0">Create</button>
-      </a>
+        Create
+      </button>
     </form>
   </div>
 </section>
